Best Design and Code added

--- a/Home11/index.html
+++ b/Home11/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Agency Final</title>
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -42,10 +43,10 @@
             <div class="col-8">
                 <span class="main-title d-block pb-3">Lorem ipsum dolor sit amet</span>
                 <span class="main-text d-block pb-3">Nunc vel nibh tempor, pharetra lectus congue, luctus orci.</span>
-                <a href="#" class="button-ask-for-price button-price-in-main-screen">Ask for price</a>
+                <a href="#" class="button-ask-for-price">Ask for price</a>
             </div>
         </div>
-        <div class="row justify-content-center align-items-end remaining-space">
+        <div class="row justify-content-center align-items-end remaining-space d-none d-sm-flex">
             <div class="col-2">
                 <a href="#" class="d-block"><img src="src/img/Rounded_Rectangle_2.png"></a>
                 <span class="scroll-down">scroll down</span>
@@ -53,6 +54,31 @@
         </div>
     </div>
 </section>
+<section class="best-design-background">
+    <div class="container">
+        <div class="row design-text-layout align-items-center justify-content-between">
+            <div class="col-12 col-sm-5">
+                <span class="white-subtitle limiter-title">Best<b>Design</b></span>
+                <p class="white-subtext py-sm-3 limiter-text">
+                    Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur ullamcorper
+                    auctor mauris, placerat fermentum lectus vulputate sed. Phasellus vestibulum sit amet dolor eget
+                    eleifend.
+                </p>
+                <a href="#" class="button-ask-for-price">Ask for price</a>
+            </div>
+            <div class="col-12 col-sm-5">
+                <span class="white-subtitle limiter-title">Best<b>Code</b></span>
+                <p class="white-subtext py-sm-3 limiter-text">
+                    Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur ullamcorper
+                    auctor mauris, placerat fermentum lectus vulputate sed. Phasellus vestibulum sit amet dolor eget
+                    eleifend.
+                </p>
+                <a href="#" class="button-ask-for-price">Ask for price</a>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
