--- a/Home11/index.html
+++ b/Home11/index.html
@@ -81,14 +81,14 @@
 <section class="container">
     <span class="d-flex justify-content-center my-5 main-title-what-we-do">What we do?</span>
     <div class="row justify-content-around">
-        <div class="col-5 web-design">
+        <div class="col-md-9 col-lg-4 col-xl-5 web-design">
             <span>Web design</span>
             <p class="pt-2">
                 Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque.
                 Curabitur ullamcorper auctor mauris, placerat fermentum.
             </p>
         </div>
-        <div class="col-5 web-application pl-5">
+        <div class="col-md-9 col-lg-4 col-xl-5 web-application pl-5">
             <span>Web application</span>
             <p class="pt-2">
                 Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque.
@@ -97,14 +97,14 @@
         </div>
     </div>
     <div class="row justify-content-around">
-        <div class="col-5 digital-painting">
+        <div class="col-md-9 col-lg-4 col-xl-5 digital-painting">
             <span>Digital painting</span>
             <p class="pt-2">
                 Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque.
                 Curabitur ullamcorper auctor mauris, placerat fermentum.
             </p>
         </div>
-        <div class="col-5 desktop-application pl-5">
+        <div class="col-md-9 col-lg-4 col-xl-5 desktop-application pl-5">
             <span>Desktop application</span>
             <p class="pt-2">
                 Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque.
@@ -113,6 +113,11 @@
         </div>
     </div>
     <div class="d-flex justify-content-center my-5"><a href="#" class="button-ask-for-price">Ask for price</a></div>
+</section>
+<section>
+    <img class="float-lg-left w-33" src="src/img/Layer_12.png">
+    <img class="float-lg-left w-33" src="src/img/Layer_14.png">
+    <img class="float-lg-left w-33" src="src/img/Layer_13.png">
 </section>
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
