--- a/Home11/index.html
+++ b/Home11/index.html
@@ -114,11 +114,61 @@
     </div>
     <div class="d-flex justify-content-center my-5"><a href="#" class="button-ask-for-price">Ask for price</a></div>
 </section>
-<section>
+<section class="clearfix ь">
     <img class="float-lg-left w-33" src="src/img/Layer_12.png">
     <img class="float-lg-left w-33" src="src/img/Layer_14.png">
     <img class="float-lg-left w-33" src="src/img/Layer_13.png">
 </section>
+<section class="about-us-background">
+    <div class="container">
+        <span class="main-title-about-us d-flex justify-content-center pt-md-5 pt-3">About us!</span>
+        <div class="about-team-div">
+            <pre class="about-team py-md-5 py-1 d-lg-flex d-none">
+                Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur ullam-
+                corper auctor mauris, placerat fermentum.
+            </pre>
+            <p class="about-team py-md-5 py-1 d-flex d-lg-none">
+                Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur ullam
+                corper auctor mauris, placerat fermentum.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-3">
+                <img class="image-card" src="src/img/Layer_16.png" height="132" width="132"/>
+                <div class="card-about-us pt-3">
+                    <span>John Doe</span>
+                    <p>Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <img class="image-card" src="src/img/Layer_17.png" height="130" width="130"/>
+                <div class="card-about-us pt-3">
+                    <span>John Doe</span>
+                    <p>Aliquam sagittis neque in lectus semper, arcu scelerisque.</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <img class="image-card" src="src/img/Layer_18.png" height="134" width="135"/>
+                <div class="card-about-us pt-3">
+                    <span>John Doe</span>
+                    <p>Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <img class="image-card" src="src/img/Layer_4_copy_3.png" height="135" width="135"/>
+                <div class="card-about-us pt-3">
+                    <span>John Doe</span>
+                    <p>Neque in lectus semper, nec elementum arcu scelerisque.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<img  class="map" src="src/img/Ultra_Light_with_Labels___Snazzy_Maps___Free_Styles_for_Google_Maps.png">
+<footer class="container">
+    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <span>Try awsome tool for desgners <b>symu.co</b></span>
+</footer>
 <script src="assets/js/libs.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
