--- a/Home11/index.html
+++ b/Home11/index.html
@@ -114,10 +114,39 @@
     </div>
     <div class="d-flex justify-content-center my-5"><a href="#" class="button-ask-for-price">Ask for price</a></div>
 </section>
-<section class="clearfix ь">
-    <img class="float-lg-left w-33" src="src/img/Layer_12.png">
-    <img class="float-lg-left w-33" src="src/img/Layer_14.png">
-    <img class="float-lg-left w-33" src="src/img/Layer_13.png">
+<section class="container-fluid clearfix">
+    <div class="row">
+        <div class="float-lg-left card col-lg-4 p-0">
+            <img class="  card-img" src="src/img/Layer_12.png">
+            <div class="card-img-overlay Overlay text-center">
+                <span class="card-title">DroneZone Template</span>
+                <p class="card-text">Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur
+                    ullamcorper auctor
+                    mauris, placerat fermentum.</p>
+                <a href="#" class="card-text button-ask-for-price">Watch more</a>
+            </div>
+        </div>
+        <div class="float-lg-left card col-lg-4 p-0">
+            <img class=" card-img" src="src/img/Layer_14.png">
+            <div class="card-img-overlay Overlay text-center">
+                <span class="card-title">Neptune Template</span>
+                <p class="card-text">Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur
+                    ullamcorper auctor
+                    mauris, placerat fermentum.</p>
+                <a href="#" class="card-text button-ask-for-price">Watch more</a>
+            </div>
+        </div>
+        <div class="float-lg-left card col-lg-4 p-0">
+            <img class="card-img" src="src/img/Layer_13.png">
+            <div class="card-img-overlay Overlay text-center">
+                <span class="card-title">FitApp Template</span>
+                <p class="card-text">Aliquam sagittis neque in lectus semper, nec elementum arcu scelerisque. Curabitur
+                    ullamcorper auctor
+                    mauris, placerat fermentum.</p>
+                <a href="#" class="card-text button-ask-for-price">Watch more</a>
+            </div>
+        </div>
+    </div>
 </section>
 <section class="about-us-background">
     <div class="container">
@@ -136,35 +165,35 @@
             <div class="col-3">
                 <img class="image-card" src="src/img/Layer_16.png" height="132" width="132"/>
                 <div class="card-about-us pt-3">
-                    <span>John Doe</span>
-                    <p>Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                    <span class="name">John Doe</span>
+                    <p class="about-person">Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
                 </div>
             </div>
             <div class="col-3">
                 <img class="image-card" src="src/img/Layer_17.png" height="130" width="130"/>
                 <div class="card-about-us pt-3">
-                    <span>John Doe</span>
-                    <p>Aliquam sagittis neque in lectus semper, arcu scelerisque.</p>
+                    <span class="name">John Doe</span>
+                    <p class="about-person">Aliquam sagittis neque in lectus semper, arcu scelerisque.</p>
                 </div>
             </div>
             <div class="col-3">
                 <img class="image-card" src="src/img/Layer_18.png" height="134" width="135"/>
                 <div class="card-about-us pt-3">
-                    <span>John Doe</span>
-                    <p>Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
+                    <span class="name">John Doe</span>
+                    <p class="about-person">Curabitur ullamcorper auctor mauris, placerat fermentum.</p>
                 </div>
             </div>
             <div class="col-3">
                 <img class="image-card" src="src/img/Layer_4_copy_3.png" height="135" width="135"/>
                 <div class="card-about-us pt-3">
-                    <span>John Doe</span>
-                    <p>Neque in lectus semper, nec elementum arcu scelerisque.</p>
+                    <span class="name">John Doe</span>
+                    <p class="about-person">Neque in lectus semper, nec elementum arcu scelerisque.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<img  class="map" src="src/img/Ultra_Light_with_Labels___Snazzy_Maps___Free_Styles_for_Google_Maps.png">
+<img class="map" src="src/img/Ultra_Light_with_Labels___Snazzy_Maps___Free_Styles_for_Google_Maps.png">
 <footer class="container">
     <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
     <span>Try awsome tool for desgners <b>symu.co</b></span>
