Home10 header done

--- a/Home10/index.html
+++ b/Home10/index.html
@@ -2,49 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lets Rock</title>
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Logo here</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<header class="container-fluid background-header">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand mr-auto ml-auto d-lg-none" href="#"><img src="src/img/cantus_logotype.png"></a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav float-left   mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white general-menu" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li>
+                    <a class="nav-link text-white general-menu" href="#">events</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li>
+                    <a class="nav-link text-white general-menu" href="#">gallery</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li>
+                    <a class="nav-link text-white general-menu" href="#">news</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li>
+                    <a class="nav-link text-white general-menu" href="#">albums</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li>
+                    <a class="nav-link text-white general-menu" href="#">pages</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+            </ul>
+            <a class="navbar-brand mr-auto ml-auto d-none d-lg-block" href="#"><img src="src/img/cantus_logotype.png"></a>
+            <ul class="float-right navbar-nav mt-2 mt-lg-0">
+                <li>
+                    <a class="nav-link social-networks text-white" href="#">
+                        <img src="src/img/Facebook_Icon.png">
+                        <span>32K</span>
+                    </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li>
+                    <a class="nav-link social-networks text-white" href="#">
+                        <img src="src/img/Twitter_Icon.png">
+                        <span>55K</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link social-networks text-white" href="#">
+                        <img src="src/img/Google_Icon.png">
+                        <span>23K</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="purchase-button">purchase ticket</a>
                 </li>
             </ul>
         </div>
     </nav>
 </header>
 
-<script src="assets/js/libs.js"></script>
-<script src="assets/js/main.js"></script>
 </body>
 </html>
