Home10 lets-rock-slider done

--- a/Home10/index.html
+++ b/Home10/index.html
@@ -9,12 +9,13 @@
 <header class="container-fluid background-header">
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand mr-auto ml-auto d-lg-none" href="#"><img src="src/img/cantus_logotype.png"></a>
-        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav float-left   mt-2 mt-lg-0">
+            <ul class="navbar-nav float-left mt-2 mt-lg-0">
                 <li class="nav-item active">
                     <a class="nav-link text-white general-menu" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -34,7 +35,8 @@
                     <a class="nav-link text-white general-menu" href="#">pages</a>
                 </li>
             </ul>
-            <a class="navbar-brand mr-auto ml-auto d-none d-lg-block" href="#"><img src="src/img/cantus_logotype.png"></a>
+            <a class="navbar-brand mr-auto ml-auto d-none d-lg-block" href="#"><img
+                    src="src/img/cantus_logotype.png"></a>
             <ul class="float-right navbar-nav mt-2 mt-lg-0">
                 <li>
                     <a class="nav-link social-networks text-white" href="#">
@@ -61,6 +63,35 @@
         </div>
     </nav>
 </header>
-
+<section class="container-fluid">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100 card-img" src="src/img/Lets-rock.png/?auto=yes&bg=777&fg=555&text=First slide"
+                     alt="First slide">
+                <div class="card-img-overlay d-flex flex-column justify-content-center">
+                    <span class="lets-rock card-title">
+                        Let's Rock
+                    </span>
+                    <span class="cantus card-text mb-3">
+                        With Cantus
+                    </span>
+                    <a href="#" class="card-text mr-auto ml-auto pr-3 pl-3 pt-1 pb-1 mt-5 discover-more-button">discover more</a>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <div class="progress" style="height: 3px;">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+</section>
 </body>
 </html>
