--- a/Home10/index.html
+++ b/Home10/index.html
@@ -76,7 +76,8 @@
                     <span class="cantus card-text mb-3">
                         With Cantus
                     </span>
-                    <a href="#" class="card-text mr-auto ml-auto pr-3 pl-3 pt-1 pb-1 mt-5 discover-more-button">discover more</a>
+                    <a href="#" class="card-text mr-auto ml-auto pr-3 pl-3 pt-1 pb-1 mt-5 discover-more-button">discover
+                        more</a>
                 </div>
             </div>
         </div>
@@ -90,8 +91,107 @@
         </a>
     </div>
     <div class="progress" style="height: 3px;">
-        <div class="progress-bar bg-danger" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0"
+             aria-valuemax="100">
+        </div>
     </div>
 </section>
+<section class="container my-5">
+    <span class="subtitle">
+        INTRODUCING
+        <b>Our Members</b>
+    </span>
+    <div class="clearfix">
+        <div class="float-right clearfix">
+            <a href="#" class="red-small-button mr-1"> < </a>
+            <a href="#" class="red-small-button "> > </a>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-12 col-lg-4 img1 mr-lg-2">
+            <span class="name">John Smith</span>
+            <p class="working">Vocal</p>
+            <a class="social-networks-on-card">
+                <img src="src/img/Facebook_Icon.png">
+                <span>32K</span>
+                <img src="src/img/Twitter_Icon.png">
+                <span>32K</span>
+                <img src="src/img/Google_Icon.png">
+                <span>32K</span>
+            </a>
+        </div>
+        <div class="col-12 col-lg-4 img2 mr-lg-2">
+            <span class="name">Rendi Outhor</span>
+            <p class="working">Drum</p>
+            <a class="social-networks-on-card">
+                <img src="src/img/Facebook_Icon.png">
+                <span>32K</span>
+                <img src="src/img/Twitter_Icon.png">
+                <span>32K</span>
+                <img src="src/img/Google_Icon.png">
+                <span>32K</span>
+            </a>
+        </div>
+        <div class="col-12 col-lg-4 img3">
+            <span class="name">Renes Odim</span>
+            <p class="working">Guiter</p>
+            <a class="social-networks-on-card">
+                <img src="src/img/Facebook_Icon.png">
+                <span>32K</span>
+                <img src="src/img/Twitter_Icon.png">
+                <span>32K</span>
+                <img src="src/img/Google_Icon.png">
+                <span>32K</span>
+            </a>
+        </div>
+    </div>
+</section>
+<section class="container mt-5">
+    <div class="row justify-content-between">
+        <div class="col-7 ">
+            <span class="subtitle ">
+                UPCOMING
+                <b>Content</b>
+            </span>
+            <div class="float-left mt-3">
+                <img src="src/img/photo-1445965752525-ac2d3c195ffe.png">
+                <div class="card-img-overlay ">
+                <span class="date">
+                    13
+                </span>
+                    <span class="date month">
+                    Jan
+                </span>
+                </div>
+            </div>
+            <div class="float-left ml-5 mt-3">
+                <span class="where ">Texas Rocks nation 2016</span>
+                <ul class="information-about-where mt-3">
+                    <li>Location  :   31 Great Smith Street, UK</li>
+                    <li>Date        :    July 13, 2017</li>
+                    <li>Time       :   10:00 AM</li>
+                    <li>Price       :    $40</li>
+                </ul>
+                <a href="#" class=" pr-4 pl-4 pt-3 pb-3 discover-more-button">purchase Ticket</a>
+            </div>
+
+        </div>
+        <div class="col-4">
+            <span class="subtitle">
+                Latest
+                <b>Video</b>
+            </span>
+            <div class="float-right clearfix">
+                <a href="#" class="red-small-button mr-1"> < </a>
+                <a href="#" class="red-small-button "> > </a>
+            </div>
+            <img src="src/img/BG80NXTTHY.png">
+        </div>
+    </div>
+    <div class="progress" style="height: 3px;">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 10%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="75"></div>
+    </div>
+</section>
+<section></section>
 </body>
 </html>
