--- a/Home10/index.html
+++ b/Home10/index.html
@@ -148,7 +148,7 @@
 </section>
 <section class="container mt-5">
     <div class="row justify-content-between">
-        <div class="col-7 ">
+        <div class="col-lg-7 col-12">
             <span class="subtitle ">
                 UPCOMING
                 <b>Content</b>
@@ -174,9 +174,8 @@
                 </ul>
                 <a href="#" class=" pr-4 pl-4 pt-3 pb-3 discover-more-button">purchase Ticket</a>
             </div>
-
         </div>
-        <div class="col-4">
+        <div class="col-lg-4 col-12">
             <span class="subtitle">
                 Latest
                 <b>Video</b>
@@ -188,10 +187,58 @@
             <img src="src/img/BG80NXTTHY.png">
         </div>
     </div>
-    <div class="progress" style="height: 3px;">
+    <div class="progress mt-2" style="height: 3px;">
         <div class="progress-bar bg-danger" role="progressbar" style="width: 10%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="75"></div>
     </div>
 </section>
-<section></section>
+<section class="container mt-5 staying-in-hearts">
+    <div class="Our-Founder-block">
+        <span>Our Founder staying in our hearts</span>
+        <p class="mt-2">1982 <b>cantus</b> Start jurny and now it‘s top class Rock Band in the California.</p>
+        <a href="#" class="purchase-button mt-3">learn more</a>
+    </div>
+</section>
+<section class="container mt-5">
+    <div class="row justify-content-between">
+        <div class="col-lg-8 col-12">
+            <span class="subtitle ">
+                POPULAR
+                <b>Songs</b>
+            </span>
+            <div class="mt-3">
+                <img src="src/img/33-layers.png">
+            </div>
+            <div class="mt-5">
+                <ul class="list-of-songs ">
+                    <li>01. My heart is dancing</li>
+                    <li>02. Good day</li>
+                    <li>03. Life for rent</li>
+                    <li>04. Hello It’s me</li>
+                    <li>05. My heart is dancing</li>
+                    <li>06. Good day</li>
+                    <li>07. Life for rent</li>
+                    <li>08. Hello It’s me</li>
+                    <li>09. My heart is dancing</li>
+                    <li>10. Good day</li>
+                    <li>11. Life for rent</li>
+                    <li>12. Hello It’s me</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-4 col-12">
+            <span class="subtitle">
+                INSTAGRAM
+                <b>Feed</b>
+            </span>
+            <div class="row">
+                <div class="col-6"><img src="src/img/RW2XCG8CY7.png" height="169" width="170"/></div>
+                <div class="col-6"><img src="src/img/2MLOU68A5O.png" height="169" width="170"/></div>
+                <div class="col-6 mt-3"><img src="src/img/F5CE4RRRRY.png" height="169" width="170"/></div>
+                <div class="col-6 mt-3"><img src="src/img/H3V72OR6KN.png" height="169" width="170"/></div>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
