Home10 work is done, but need some fix

--- a/Home10/index.html
+++ b/Home10/index.html
@@ -200,7 +200,7 @@
 </section>
 <section class="container mt-5">
     <div class="row justify-content-between">
-        <div class="col-lg-8 col-12">
+        <div class="col-lg-7 col-12">
             <span class="subtitle ">
                 POPULAR
                 <b>Songs</b>
@@ -239,6 +239,42 @@
         </div>
     </div>
 </section>
-
+<section class="container mt-5 our-apps">
+    <span>Download Our Official Apps</span>
+    <p>Never stop listening. Take your playlists and likes wherever you go.</p>
+    <div>
+        <a href="#"><img src="src/img/3-layers.png" height="50" width="162"/></a>
+        <a href="#"><img src="src/img/4-layers.png" height="50" width="162"/></a>
+    </div>
+</section>
+<section class="container">
+    <div class="subscribe border-bottom">
+        <span>subscribe newsletter</span>
+        <a href="#"><img src="src/img/Arrow_Icon.png" height="14" width="14"/></a>
+    </div>
+</section>
+<footer>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Events</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Gallery</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">News</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Albums</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Pages</a>
+        </li>
+    </ul>
+    <span class="copyright-cantus d-flex justify-content-center">Copyright © 2009–2016 <b>cantus</b> © their respective owners. Shipped from Salem, Mass. USA.</span>
+</footer>
 </body>
 </html>
